'dired-enable-globstar-in-shell' lists which shells can have globstar
enabled, and how to enable it.

+++
*** New user option 'dired-copy-dereference'.
If set to non-nil, Dired will dereference symbolic links when copying.
This can be switched off on a per-usage basis by providing
'dired-do-copy' with a 'C-u' prefix.

*** New user option 'dired-do-revert-buffer'.
Its non-nil value reverts the Dired buffer that is the destination
of copy/rename/symlink/hardlink operations.

*** New user option 'dired-mark-region' affects all Dired commands
that mark files.  When non-nil and the region is active in Transient
Mark mode, then Dired commands operate only on files in the active
region.  The values 'file' and 'line' of this user option define the
details of marking the file at the end of the region.

*** State changing VC operations are supported in Dired on files and
directories with the help of new command 'dired-vc-next-action'.

+++
*** 'dired-jump' and 'dired-jump-other-window' moved from 'dired-x' to 'dired'.
The 'dired-jump' and 'dired-jump-other-window' commands have been
moved from the 'dired-x' package to 'dired'.  The user option
'dired-bind-jump' no longer has any effect and is now obsolete.
The commands are now bound to 'C-x C-j' and 'C-x 4 C-j' by default.

To get the old behavior of 'dired-bind-jump' back and unbind the above
keys, add the following to your init file:

(global-set-key "\C-x\C-j" nil)
(global-set-key "\C-x4\C-j" nil)

** Change Logs and VC

*** More VC commands can be used from non-file buffers.
The relevant commands are those that don't change the VC state.
The non-file buffers which can use VC commands are those that have
their 'default-directory' under VC.

*** New command 'vc-dir-root' uses the root directory without asking.

---
*** New face 'log-view-commit-body'.
This is used when expanding commit messages from 'vc-print-root-log'
and similar commands.

---
*** New faces for 'vc-dir' buffers.